# TankTek

./: .gitignore  AUTHORS.md  CMakeLists.txt  CMakePresets.json  README.md
assets/shaders/: default.glsl  default.tkshader
engine/: CMakeLists.txt
engine/src/TankTek/: TankTek.hpp
engine/src/TankTek/utils/: Logger.cpp  Logger.hpp  Toolbox.cpp  Toolbox.hpp
example/: CMakeLists.txt
example/include/Example/: HelloQuadScene.hpp
example/src/: ExampleApp.cpp  HelloQuadScene.cpp
framework/: CMakeLists.txt
framework/include/: TankTek.hpp
framework/include/TankTek/: EntryPoint.hpp
framework/include/TankTek/core/: Application.hpp  GameLoop.hpp  Scene.hpp  Window.hpp
framework/include/TankTek/input/: KeyListener.hpp  MouseListener.hpp
framework/include/TankTek/lang/tkshader/: ShaderDSL.hpp
framework/include/TankTek/math/: Math.hpp
framework/include/TankTek/render/: Camera3D.hpp  ModelLoader.hpp  RawModel.hpp  RenderUtils.hpp  ShaderProgram.hpp
framework/include/TankTek/resources/: Block.hpp
framework/include/TankTek/utils/: Logger.hpp  ShaderSource.hpp  Time.hpp  VaoUtils.hpp
framework/src/core/: Application.cpp  GameLoop.cpp  Scene.cpp  Window.cpp
framework/src/input/: KeyListener.cpp  MouseListener.cpp
framework/src/lang/tkshader/: ShaderDSL.cpp
framework/src/math/: Math.cpp
framework/src/render/: Camera3D.cpp  ModelLoader.cpp  RawModel.cpp  RenderUtils.cpp  ShaderProgram.cpp
framework/src/utils/: Logger.cpp  Time.cpp  VaoUtils.cpp
